--- a/source/index.html
+++ b/source/index.html
@@ -57,9 +57,10 @@
           <ul class="welcome__list">
             <li class="welcome__item">
               <div class="welcome__item-wrapper">
-                <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
+                <h2 class="welcome__slider-title title">Welcome <br>to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <a class="button welcome__button text-btn"
+
+                <a class="welcome__button button text-btn"
                   href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                   target="_blank">
                   Discover the Louvre
@@ -71,7 +72,7 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <a class="button welcome__button text-btn"
+                <a class="welcome__button button text-btn"
                   href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                   target="_blank">
                   Discover the Louvre
@@ -83,7 +84,7 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <a class="button welcome__button text-btn"
+                <a class="welcome__button button text-btn"
                   href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                   target="_blank">
                   Discover the Louvre
@@ -95,7 +96,7 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <a class="button welcome__button text-btn"
+                <a class="welcome__button button text-btn"
                   href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                   target="_blank">
                   Discover the Louvre
@@ -107,7 +108,7 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <a class="button welcome__button text-btn"
+                <a class="welcome__button button text-btn"
                   href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                   target="_blank">
                   Discover the Louvre
@@ -117,7 +118,12 @@
           </ul class>
 
           <div class="welcome__slider-controller">
-            <div class="welcome__slider-str"><span>01</span> | <span>05</span></div>
+            <div class="welcome__slider-str">
+              <span>01</span>
+              <span>|</span>
+              <span>05</span>
+            </div>
+
             <div class="welcome__slider-pagination">
               <span class="visually-hidden">булллиты</span>
               <button class="welcome__slider-bullit welcome__slider-bullit--current" type="button"></button>
@@ -225,7 +231,7 @@
             Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.
           </p>
           <p class="explore__text text-light text-light text-light--bg-dark">
-            It was cleaned in 1984 to remove a <span class="explore__color">"yellow veil"</span> of dust that had
+            It was cleaned in 1984 to remove a <span class="explore__color">"yellow veil"</span>of dust that had
             gathered since the previous restoration in the 19th century.
           </p>
           <p class="explore__text text-light text-light text-light--bg-dark">
@@ -521,7 +527,7 @@
         <h2 class="contacts__title title title--section title--underline">Contacts</h2>
         <div class="contacts__wrapper">
           <div>
-            <h3 class="contacts__address text-address">Palais Royal Musee du Louvre</h3>
+            <h3 class="contacts__address text-address">Palais Royal<br>Musee du Louvre</h3>
             <p class="contacts__text text-light">address:
               75001 Paris, France</p>
             <p class="contacts__text text-light">phone: <a class="contacts__link text-light"
