--- a/source/index.html
+++ b/source/index.html
@@ -392,7 +392,7 @@
         <div class="gallery__slider">
           <ul class="gallery__list">
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery2-1x.jpg" alt="" width="456" height="570">
+              <img class="gallery__img gallery__img--1" src="./images/galery/galery2-1x.jpg" alt="" width="456" height="570">
             </li>
 
             <li class="gallery__item">
@@ -403,12 +403,12 @@
               <img class="gallery__img" src="./images/galery/galery4-1x.jpg" alt="" width="456" height="456">
             </li>
 
-            <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery6-1x.jpg" width="456" height="242">
+            <li class="gallery__item ">
+              <img class="gallery__img " src="./images/galery/galery6-1x.jpg" width="456" height="242">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery13-1x.jpg" alt="" width="456" height="456">
+              <img class="gallery__img gallery__img--13" src="./images/galery/galery13-1x.jpg" alt="" width="456" height="456">
             </li>
 
             <li class="gallery__item">
@@ -448,7 +448,7 @@
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery14-1x.jpg" alt="" width="456" height="342">
+              <img class="gallery__img gallery__img--15" src="./images/galery/galery14-1x.jpg" alt="" width="456" height="342">
             </li>
           </ul>
         </div>
@@ -537,7 +537,7 @@
           </div>
 
           <div>
-            <img class="contacts__img" src="./images/maps/map-1x.jpg" alt="карта сокровищ" width="960" height="620">
+            <img class="contacts__img" src="./images/maps/map_1920-1x.jpg" alt="карта сокровищ" width="960" height="620">
           </div>
         </div>
       </div>
@@ -567,7 +567,7 @@
             </li>
 
             <li class="nav__item">
-              <a class="nav__link text-nav" href="gGallery">Gallery</a>
+              <a class="nav__link text-nav" href="gallery">Gallery</a>
             </li>
 
             <li class="nav__item">
