--- a/source/index.html
+++ b/source/index.html
@@ -518,7 +518,7 @@
               </div>
             </div>
 
-            <button class="form__btn text-light" type="button">Buy Now</button>
+            <button class="form__btn" type="button">Buy Now</button>
           </form>
 
         </div>
