--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
           <ul class="welcome__list">
             <li class="welcome__item">
               <div class="welcome__item-wrapper">
-                <h2 class="welcome__slider-title title">Welcome <br>to the Louvre</h2>
+                <h2 class="welcome__slider-title title">Welcome<br>to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
 
                 <a class="welcome__button button text-btn"
@@ -618,7 +618,7 @@
 
       <div class="footer__copyright">
         <p class="text-copyright">© 2021</p>
-        <p class="text-copyright">The Rolling Scopes School</p>
+        <p class="text-copyright text-copyright--rss">The Rolling Scopes School</p>
         <p class="text-copyright">Torya</p>
       </div>
     </div>
