--- a/source/index.html
+++ b/source/index.html
@@ -2,19 +2,19 @@
 <html class="page" lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>MUSEUM</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="preload" href="#" type="font/woff2" as="font" />
-  <link rel="stylesheet" href="styles/styles.css" />
-  <!-- <script src="scripts/index.js" defer></script> -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- <link rel="preload" href="./fonts/Roboto_Condensed/RobotoCondensed-Regular.woff2" type="font/woff2" as="font"> -->
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
 <body class="page__body text-base">
   <header class="header">
     <div class="header__container container">
       <div class="logo">
-        <img class="logo__img" src="./images/logo.svg" alt="logo" width="49" height="26" />
+        <img class="logo__img" src="./images/logo.svg" alt="logo" width="49" height="26">
         <span class="text-logo">Louvre</span>
       </div>
 
@@ -22,7 +22,7 @@
         <span class="visually-hidden">burger</span>
       </button>
 
-      <nav class="header__nav nav">
+      <nav class="header__nav header__nav--closer- nav">
         <ul class="nav__list">
           <li class="nav__item">
             <a class="nav__link text-nav" href="#visiting">Visiting</a>
@@ -119,7 +119,7 @@
                 </a>
               </div>
             </li>
-          </ul class>
+          </ul>
 
           <div class="welcome__slider-controller">
             <div class="welcome__slider-str">
@@ -264,7 +264,7 @@
         <div>
 
           <div class="video__wrapper">
-            <iframe class="video__iframe" width="1440" height="650" src="https://www.youtube.com/embed/zp1BXPX8jcU" frameborder="0"
+            <iframe class="video__iframe" width="1440" height="650" src="https://www.youtube.com/embed/zp1BXPX8jcU"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen>
             </iframe>
@@ -303,7 +303,7 @@
               <!-- src="./video/video1.mp4" -->
 
               <div class="video__slider-video video__slider-video--slide1">
-                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/aWmJ5DgyWPI" frameborder="0"
+                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/aWmJ5DgyWPI"
                   loading="lazy"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
@@ -322,7 +322,7 @@
               </div> -->
 
               <div class="video__slider-video video__slider-video--slide2">
-                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" frameborder="0"
+                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo"
                   loading="lazy"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
@@ -341,7 +341,7 @@
               </div> -->
 
               <div class="video__slider-video video__slider-video--slide3">
-                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY" frameborder="0"
+                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY"
                   loading="lazy"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
@@ -360,7 +360,7 @@
               </div> -->
 
               <div class="video__slider-video video__slider-video--slide4">
-                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/2OR0OCr6uRE" frameborder="0"
+                <iframe class="video__iframe" width="452" height="254" src="https://www.youtube.com/embed/2OR0OCr6uRE"
                   loading="lazy"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
@@ -390,71 +390,72 @@
       </div>
     </section>
 
+
     <section class="gallery" id="gallery">
       <div class="container">
         <h2 class="gallery__title title">Art Gallery</h2>
         <div class="gallery__slider">
           <ul class="gallery__list">
             <li class="gallery__item">
-              <img class="gallery__img gallery__img--1" src="./images/galery/galery2-1x.jpg" alt="" width="456"
+              <img class="gallery__img gallery__img--1" src="./images/galery/galery2-1x.jpg" alt="gallery" width="456"
                 height="570">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery9-1x.jpg" alt="" width="456" height="570">
+              <img class="gallery__img" src="./images/galery/galery9-1x.jpg" alt="gallery" width="456" height="570">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery4-1x.jpg" alt="" width="456" height="456">
+              <img class="gallery__img" src="./images/galery/galery4-1x.jpg" alt="gallery" width="456" height="456">
             </li>
 
             <li class="gallery__item ">
-              <img class="gallery__img " src="./images/galery/galery6-1x.jpg" width="456" height="242">
+              <img class="gallery__img " src="./images/galery/galery6-1x.jpg" width="456" height="242" alt="gallery">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img gallery__img--13" src="./images/galery/galery13-1x.jpg" alt="" width="456"
+              <img class="gallery__img gallery__img--13" src="./images/galery/galery13-1x.jpg" alt="gallery" width="456"
                 height="456">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery1-1x.jpg" alt="" width="456" height="570">
+              <img class="gallery__img" src="./images/galery/galery1-1x.jpg" alt="gallery" width="456" height="570">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery8-1x.jpg" alt="" width="456" height="570">
+              <img class="gallery__img" src="./images/galery/galery8-1x.jpg" alt="gallery" width="456" height="570">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery3-1x.jpg" alt="" width="456" height="292">
+              <img class="gallery__img" src="./images/galery/galery3-1x.jpg" alt="gallery" width="456" height="292">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery5-1x.jpg" alt="" width="456" height="570">
+              <img class="gallery__img" src="./images/galery/galery5-1x.jpg" alt="gallery" width="456" height="570">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery11-1x.jpg" alt="" width="456" height="456">
+              <img class="gallery__img" src="./images/galery/galery11-1x.jpg" alt="gallery" width="456" height="456">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery7-1x.jpg" alt="" width="456" height="456">
+              <img class="gallery__img" src="./images/galery/galery7-1x.jpg" alt="gallery" width="456" height="456">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery10-1x.jpg" alt="" width="456" height="342">
+              <img class="gallery__img" src="./images/galery/galery10-1x.jpg" alt="gallery" width="456" height="342">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery15-1x.jpg" alt="" width="456" height="342">
+              <img class="gallery__img" src="./images/galery/galery15-1x.jpg" alt="gallery" width="456" height="342">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img" src="./images/galery/galery12-1x.jpg" alt="" width="456" height="342">
+              <img class="gallery__img" src="./images/galery/galery12-1x.jpg" alt="gallery" width="456" height="342">
             </li>
 
             <li class="gallery__item">
-              <img class="gallery__img gallery__img--15" src="./images/galery/galery14-1x.jpg" alt="" width="456"
+              <img class="gallery__img gallery__img--15" src="./images/galery/galery14-1x.jpg" alt="gallery" width="456"
                 height="342">
             </li>
           </ul>
@@ -466,9 +467,9 @@
       <div class="container">
         <h2 class="tickets__title title title--section title--underline">BUY TICKETS</h2>
         <div class="tickets__wrapper">
-          <img class="tickets__img" src="./images/tickets/tickets_1920-1x.jpg" alt="" width="720" height="550">
+          <img class="tickets__img" src="./images/tickets/tickets_1920-1x.jpg" alt="tickets" width="720" height="550">
 
-          <form class="tickets__form form" action="" method="post" autocomplete="off">
+          <form class="tickets__form form" action="/submit-form" method="post" autocomplete="off">
             <div class="form__wrapper">
               <div class="form__wrapper-type">
                 <h3 class="form__title text-bold">Ticket Type</h3>
@@ -556,7 +557,7 @@
     <div class="container">
       <div class="footer__wrapper">
         <div class="logo">
-          <img class="logo__img" src="./images/logo.svg" alt="logo" />
+          <img class="logo__img" src="./images/logo.svg" alt="logo">
           <span class="text-logo">Louvre</span>
         </div>
 
@@ -623,6 +624,7 @@
       </div>
     </div>
   </footer>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
