--- a/source/index.html
+++ b/source/index.html
@@ -561,7 +561,8 @@
           <span class="text-logo">Louvre</span>
         </div>
 
-        <nav class="nav">
+      <div class="footer__wrapper-inner">
+          <nav class="nav">
           <ul class="footer__nav">
             <li class="nav__item">
               <a class="nav__link text-nav" href="#visiting">Visiting</a>
@@ -616,11 +617,12 @@
           </li>
         </ul>
       </div>
+      </div>
 
       <div class="footer__copyright">
         <p class="text-copyright">© 2021</p>
-        <p class="text-copyright text-copyright--rss">The Rolling Scopes School</p>
-        <p class="text-copyright">Torya</p>
+        <a class="text-copyright text-copyright--link text-copyright--rss" href="https://rs.school/" target="_blank">The Rolling Scopes School</a>
+        <a class="text-copyright text-copyright--link" href="https://github.com/ToryaToria" target="_blank">Torya</a>
       </div>
     </div>
   </footer>
