--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
         <span class="visually-hidden">burger</span>
       </button>
 
-      <nav class="header__nav header__nav--closer- nav">
+      <nav class="header__nav nav">
         <ul class="nav__list">
           <li class="nav__item">
             <a class="nav__link text-nav" href="#visiting">Visiting</a>
@@ -48,6 +48,43 @@
             <a class="nav__link text-nav" href="#contacts">Contacts</a>
           </li>
         </ul>
+
+        <ul class="nav__list-img">
+          <li>
+            <a class="nav__link-img nav__link-img--1" href="#"></a>
+          </li>
+
+          <li>
+            <a class="nav__link-img nav__link-img--2" href="#"></a>
+          </li>
+
+          <li>
+            <a class="nav__link-img nav__link-img--3" href="#"></a>
+          </li>
+        </ul>
+
+        <ul class="header__social social">
+          <li class="social-item">
+            <a class="social-link social-link--youtube" href="https://www.youtube.com/user/louvre" target="_blank"></a>
+          </li>
+
+          <li class="social-item">
+            <a class="social-link social-link--inst" href="https://www.instagram.com/museelouvre/" target="_blank"></a>
+          </li>
+
+          <li class="social-item">
+            <a class="social-link social-link--face" href="https://www.facebook.com/museedulouvre" target="_blank"></a>
+          </li>
+
+          <li class="social-item">
+            <a class="social-link social-link--twitt" href="http://twitter.com/museelouvre" target="_blank"></a>
+          </li>
+
+          <li class="social-item">
+            <a class="social-link social-link--pint" href="https://www.pinterest.fr/museedulouvre/" target="_blank"></a>
+          </li>
+        </ul>
+
       </nav>
     </div>
   </header>
@@ -538,8 +575,8 @@
             <h3 class="contacts__address text-address">Palais Royal<br>Musee du Louvre</h3>
             <p class="contacts__text">address:
               75001 Paris, France</p>
-            <p class="contacts__text">phone: <a class="contacts__link text-light"
-                href="tel:+330140205050">+33(0) 1 40 20 50 50</a></p>
+            <p class="contacts__text">phone: <a class="contacts__link text-light" href="tel:+330140205050">+33(0) 1 40
+                20 50 50</a></p>
             <p class="contacts__text">mail: <a class="contacts__link text-light"
                 href="mailto:info@louvre.fr">info@louvre.fr</a></p>
           </div>
@@ -561,67 +598,67 @@
           <span class="text-logo">Louvre</span>
         </div>
 
-      <div class="footer__wrapper-inner">
+        <div class="footer__wrapper-inner">
           <nav class="nav">
-          <ul class="footer__nav">
-            <li class="nav__item">
-              <a class="nav__link text-nav" href="#visiting">Visiting</a>
+            <ul class="footer__nav">
+              <li class="nav__item">
+                <a class="nav__link text-nav" href="#visiting">Visiting</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link text-nav" href="#explore">Explore</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link text-nav" href="#video">Video</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link text-nav" href="gallery">Gallery</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link text-nav" href="#tickets">Tickets</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link text-nav" href="#contacts">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="footer__social  social">
+            <li class="social-item">
+              <a class="social-link social-link--youtube" href="https://www.youtube.com/user/louvre"
+                target="_blank"></a>
             </li>
 
-            <li class="nav__item">
-              <a class="nav__link text-nav" href="#explore">Explore</a>
+            <li class="social-item">
+              <a class="social-link social-link--inst" href="https://www.instagram.com/museelouvre/"
+                target="_blank"></a>
             </li>
 
-            <li class="nav__item">
-              <a class="nav__link text-nav" href="#video">Video</a>
+            <li class="social-item">
+              <a class="social-link social-link--face" href="https://www.facebook.com/museedulouvre"
+                target="_blank"></a>
             </li>
 
-            <li class="nav__item">
-              <a class="nav__link text-nav" href="gallery">Gallery</a>
+            <li class="social-item">
+              <a class="social-link social-link--twitt" href="http://twitter.com/museelouvre" target="_blank"></a>
             </li>
 
-            <li class="nav__item">
-              <a class="nav__link text-nav" href="#tickets">Tickets</a>
-            </li>
-
-            <li class="nav__item">
-              <a class="nav__link text-nav" href="#contacts">Contacts</a>
+            <li class="social-item">
+              <a class="social-link social-link--pint" href="https://www.pinterest.fr/museedulouvre/"
+                target="_blank"></a>
             </li>
           </ul>
-        </nav>
-
-        <ul class="footer__social">
-          <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/louvre"
-              target="_blank"></a>
-          </li>
-
-          <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--inst" href="https://www.instagram.com/museelouvre/"
-              target="_blank"></a>
-          </li>
-
-          <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--face" href="https://www.facebook.com/museedulouvre"
-              target="_blank"></a>
-          </li>
-
-          <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--twitt" href="http://twitter.com/museelouvre"
-              target="_blank"></a>
-          </li>
-
-          <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--pint" href="https://www.pinterest.fr/museedulouvre/"
-              target="_blank"></a>
-          </li>
-        </ul>
-      </div>
+        </div>
       </div>
 
       <div class="footer__copyright">
         <p class="text-copyright">© 2021</p>
-        <a class="text-copyright text-copyright--link text-copyright--rss" href="https://rs.school/" target="_blank">The Rolling Scopes School</a>
+        <a class="text-copyright text-copyright--link text-copyright--rss" href="https://rs.school/" target="_blank">The
+          Rolling Scopes School</a>
         <a class="text-copyright text-copyright--link" href="https://github.com/ToryaToria" target="_blank">Torya</a>
       </div>
     </div>
